# iTianLLMOps

./: README.md  alembic.ini  pyproject.toml
backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
itian/common/constants/enums/: telemetry.py
itian/common/errcode/: base.py  dataset.py  linsight.py  telemetry.py  tool.py
itian/common/models/: base.py
itian/common/schemas/telemetry/: base_telemetry_schema.py  event_data_schema.py
itian/core/context/: base.py  examples.py  manager.py
itian/core/database/: connection.py  manager.py
itian/llm/domain/llm/: base.py
itian/llm/domain/models/: llm_server.py
