[project]
name = "backend"
version = "0.1.0"
description = "A simple LLM application platform"
requires-python = ">=3.10"
dependencies = [
    "celery>=5.5.3",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "sqlmodel>=0.0.14",
    "pydantic>=2.0.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.6",
    "redis>=5.0.0",
    "langchain>=0.1.0",
    "langchain-openai>=0.0.5",
    "loguru>=0.7.0",
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[tool.setuptools.packages.find]
include = ["itian*", "itian_langchain*"]
